# tg-chatgpt3.5-turbo

./: .gitignore  README.md  chatgpt.py  config_reader.py  env_example  handlers.py  main.py  pyproject.toml  requirements.txt
bot/: __main__.py  config_reader.py  handlers.py  logger.py
