[tool.poetry]
name = "tg-chatgpt"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "tg_chatgpt"}]

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.27.0"
aiogram = {version = "^3.0.0b7", allow-prereleases = true}
pydantic = {extras = ["dotenv"], version = "^1.10.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
